--- a/pom.xml
+++ b/pom.xml
@@ -213,6 +213,12 @@
       <artifactId>authentication-tokens</artifactId>
       <version>1.3</version>
     </dependency>
+    <dependency>
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>job-dsl</artifactId>
+      <version>1.74</version>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 
   <repositories>
